src/tui/snapshots/mysteries__tui__render__tests__tui_activity_exit_intent_priority.snap
---
source: src/tui/render.rs
assertion_line: 4215
expression: text
---
‹text.muted›↓ 120 tok · 60 t/s‹/›‹text.primary›                                          ‹/›‹text.muted›再按一次 Ctrl+C 退出‹/›
