src/tui/snapshots/mysteries__tui__render__tests__tui_activity_paste_receiving.snap
---
source: src/tui/render.rs
expression: text
---
‹text.muted›◇ 就绪‹/›‹text.primary›                                                                ‹/›‹text.muted›⋯ 接收粘贴‹/›
