src/tui/snapshots/mysteries__tui__render__tests__tui_activity_token_rates.snap
---
source: src/tui/render.rs
expression: text
---
streaming_approx: ‹accent.primary›⠸ 调用模型…‹/›‹text.muted› · esc 中断 · ~50 t/s‹/›
real_running: ‹accent.primary›⠸ 调用模型…‹/›‹text.muted› · esc 中断 · ↓ 120 tok · 60 t/s‹/›
idle_after_turn: ‹text.muted›↓ 120 tok · 60 t/s‹/›
