src/tui/snapshots/mysteries__tui__render__tests__tui_delegate_task_running_daylight.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.2.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────────────────────‹/›
‹border.subtle›┌─ ‹/›‹accent.primary›⠸‹/›‹text.muted› ‹/›‹accent.primary +bold›delegate_task‹/›‹text.muted› {"task":"只读审查 src/agent 模块"}‹/›‹text.secondary›  只读 · 自动运行‹/›
‹border.subtle›│ ‹/›‹text.body›运行中…‹/›
‹border.subtle›└───────────────────────────────────────────────────────────────────────────────────────────────‹/›
















‹accent.primary›⠸ 执行 delegate_task…‹/›‹text.muted› · esc 中断‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›> ‹/›‹text.title›                                                                     ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.muted›mock · mock-model · iter 0/4 · 0 msgs · .‹/›
‹text.muted›▸ normal · shift+tab 切换 · think low‹/›
